# recommendation_study

./: .gitignore  README.md  makefile  mypy.ini  pyproject.toml  requirements.txt
recommendation/: Dockerfile  pyproject.toml  requirements.txt
recommendation/src/: main.py
recommendation/src/algorithms/: association_recommender.py  base_recommender.py  popularity_recommender.py  random_recommender.py  regression_recommendation.py  umcf_recommender.py
recommendation/src/models/: dataset.py  metrics.py
recommendation/src/utils/: download.py  small_ratings.py
