[tool.poetry]
name = "recommendation_study"
version = "0.0.0"
description = ""
authors = ["shibuiwilliam <shibuiyusuke@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.6"
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
