[tool.poetry]
name = "recommendation"
version = "0.0.0"
description = ""
authors = ["shibuiwilliam <shibuiyusuke@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.6"
numpy = "^1.24.1"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
gensim = "^4.3.0"
implicit = "^0.6.2"
mlxtend = "^0.21.0"
onnx = "^1.13.0"
onnxruntime = "^1.13.1"
httpx = "^0.23.2"
tqdm = "^4.64.1"
pandera = "^0.13.4"
flatbuffers = "^22.12.6"
Pillow = "^9.4.0"
click = "^8.1.3"
fire = "^0.5.0"
scikit-surprise = "^1.1.3"
surprise = "^0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
